fix: fix bug with z-index: -1, its incorrect for work with clock-event

--- a/codejam-dom-pallete/palette/styles/style.css
+++ b/codejam-dom-pallete/palette/styles/style.css
@@ -215,7 +215,6 @@ input[type="color"]::-webkit-color-swatch {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
   grid-gap: 8px;
-  z-index: -1;
 }
 
 .main-container-canvas__square {
